--- a/resiliency_I/good-approach-circuit-breaker/package.json
+++ b/resiliency_I/good-approach-circuit-breaker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "good-approach-cb",
+  "name": "good-approach-circuit-breaker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
