--- a/architectural/good-approach-loose-coupling/package.json
+++ b/architectural/good-approach-loose-coupling/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bad-approach",
+  "name": "good-approach-loose-coupling",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
