--- a/architectural/queue/package.json
+++ b/architectural/queue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "key-store-loose-coupling",
+  "name": "key-store",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
