--- a/architectural/good-approach-hexagonal/package.json
+++ b/architectural/good-approach-hexagonal/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.7.1",
+    "@grpc/proto-loader": "^0.7.3",
+    "async": "^3.2.4",
     "axios": "^0.25.0",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lodash": "^4.17.21"
   }
 }
